--- a/.eslintrc
+++ b/.eslintrc
@@ -17,11 +17,7 @@
     "react/prop-types": "off",
     "array-callback-return": "off",
     "react/no-access-state-in-setstate": "off",
-    "react/destructuring-assignment": [
-      true,
-      "always",
-      { "ignoreClassFields": true }
-    ],
+    "react/destructuring-assignment": [true, "always", { "ignoreClassFields": true }],
     "sort-imports": [
       "error",
       {
