--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "uri": "https://github.com/KTH/node-web"
   },
   "scripts": {
-    "babel": "babel public/js/app -d dist/js ",
     "vendor": "parcel build  ./public/js/vendor.js",
     "test": "NODE_ENV=development mocha --exit test/unit/*.js",
-    "codecheck": "standard",
-    "codefix": "standard --fix",
+    "codefix": "pretty-quick",
     "docker": "npm install --development && npm run build && npm prune --production",
     "build": "NODE_ENV=production gulp build && rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
     "build-dev": "cross-env NODE_ENV=development gulp build && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx --public-url /node/static",
@@ -76,9 +74,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "husky": "^1.3.1",
-    "kth-node-build-commons": "^3.0.3",
+    "kth-node-build-commons": "^4.0.3",
     "merge-stream": "^1.0.1",
     "mocha": "5.2.0",
     "mockery": "^2.1.0",
