Updated packages and removed vulnerabilites

--- a/package.json
+++ b/package.json
@@ -23,37 +23,36 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.1.3",
-    "component-registry": "^1.0.0",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^6.1.0",
+    "bootstrap": "^4.3.1",
+    "component-registry": "^1.0.2",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "kth-node-access-log": "^0.2.0",
-    "kth-node-api-call": "^2.0.4",
-    "kth-node-configuration": "^1.6.4",
-    "kth-node-express-routing": "^1.0.0",
+    "kth-node-api-call": "^3.0.4",
+    "kth-node-configuration": "^2.0.1",
+    "kth-node-express-routing": "^2.0.3",
     "kth-node-i18n": "^1.0.2",
-    "kth-node-ldap": "^2.4.0",
+    "kth-node-ldap": "^3.0.5",
     "kth-node-log": "^3.0.2",
-    "kth-node-monitor": "^0.1.19",
+    "kth-node-monitor": "^1.0.26",
     "kth-node-passport-cas": "^3.1.9",
     "kth-node-redis": "^2.0.1",
-    "kth-node-server": "^3.1.1",
-    "kth-node-session": "^1.0.3",
-    "kth-node-web-common": "^3.0.6",
-    "kth-style": "^3.2.19",
+    "kth-node-server": "^3.1.2",
+    "kth-node-session": "^1.0.4",
+    "kth-node-web-common": "^4.0.1",
+    "kth-style": "^4.2.2",
     "locale": "^0.1.0",
     "mobx": "^5.13.0",
     "mobx-react": "^5.4.4",
     "passport": "^0.4.0",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router": "^5.1.0",
-    "react-router-dom": "^5.1.0",
-    "reactstrap": "^7.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "safe-utils": "^0.2.1"
   },
   "devDependencies": {
@@ -75,22 +74,29 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "gulp": "^4.0.2",
-    "husky": "^1.3.1",
-    "kth-node-build-commons": "^4.0.3",
-    "merge-stream": "^1.0.1",
-    "mocha": "5.2.0",
+    "husky": "^3.0.9",
+    "kth-node-build-commons": "^4.0.5",
+    "merge-stream": "^2.0.0",
+    "mocha": "6.2.2",
     "mockery": "^2.1.0",
-    "nock": "^10.0.2",
+    "nock": "^11.7.0",
     "node-mocks-http": "^1.8.0",
-    "nodemon": "^1.19.2",
-    "parcel-bundler": "^1.12.3",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "sass": "^1.22.12",
-    "zombie": "6.1.3"
+    "nodemon": "^1.19.4",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "sass": "^1.23.3",
+    "zombie": "6.1.4"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 120
   },
   "engines": {
-    "node": "8.12.0"
+    "node": "8.16.1"
   },
   "jshintConfig": {
     "maxerr": 5
